[project]
name = "csci365-final-project"
version = "0.1.0"
description = "F1 Halo removal via video inpainting — CSCI 365 DIP Spring 2026"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "opencv-python>=4.11",
    "numpy>=1.26",
    "scipy>=1.17",
    "torch>=2.10",
    "torchvision>=0.26",
    "simple-lama-inpainting>=0.1.2",
    "yt-dlp>=2026.3",
    "matplotlib>=3.9",
    "pillow>=9.5",
    "jupyter>=1.1",
    "ipykernel>=6.29",
    "segment-anything>=1.0",
]
